fix settings scrollbars in edge

--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -6,7 +6,6 @@ body {
   -webkit-user-select: none;
   user-select: none;
   overflow: auto;
-  min-width: 400px;
   font-size: 14px;
 }
 
